feat: add adaptive for index

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -130,7 +130,9 @@
                         <div class="dropdown dropdown--user">
                             <button type="button" class="btn user-controls__btn dropdown__btn">
                                 <img src="img/icons/user.svg" class="btn__icon" alt="">
-                                Пользователь
+                                <span class="user-controls__btn-text">
+                                    Пользователь
+                                </span>
                             </button>
                             <div class="dropdown__content">
                                 <ul class="dropdown__list">
@@ -153,7 +155,9 @@
                     <li class="user-controls__item">
                         <button type="button" class="btn user-controls__btn">
                             <img src="img/icons/like.svg" class="btn__icon" alt="">
-                            Избранное
+                            <span class="user-controls__btn-text">
+                                Избранное
+                            </span>
                             <span class="user-controls__btn-dot purple"></span>
                         </button>
                     </li>
@@ -161,7 +165,10 @@
                         <div class="dropdown dropdown--cart">
                             <button type="button" class="btn user-controls__btn dropdown__btn">
                                 <img src="img/icons/cart.svg" class="btn__icon" alt="">
-                                Корзина
+                                <span class="user-controls__btn-text">
+                                    Корзина
+
+                                </span>
                                 <span class="user-controls__btn-dot orange"></span>
                             </button>
 
