--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -6,6 +6,38 @@
     &--main {
         position: relative;
         margin: 43px 0 58px 0;
+
+        @media (max-width: $lg) {
+            max-width: 700px;
+            max-height: 165px;
+            min-height: 165px;
+
+            margin: 36px auto;
+        }
+
+        .banner__title {
+            @media (max-width: $lg) {
+                font-size: 1.9rem;
+            }
+        }
+
+        .banner__image {
+            @media (max-width: $lg) {
+                max-width: 249px;
+                max-height: 80px;
+            }
+        }
+
+        .banner__sale-btn {
+            @media (max-width: $lg) {
+                max-width: 183px;
+                min-height: 35px;
+
+                font-size: 1.2rem;
+
+                top: -18px;
+            }
+        }
     }
 
     &--1 {
@@ -23,6 +55,11 @@
         background-position: center;
         background-size: auto, cover;
 
+        @media (max-width: $lg) {
+            min-height: 83px;
+            padding: 17px 24px;
+        }
+
         .banner__title {
             max-width: 499px;
 
@@ -32,10 +69,19 @@
             line-height: 1.2;
             color: #fff;
 
+            @media (max-width: $lg) {
+                max-width: 268px;
+                font-size: 1.5rem;
+            }
+
             strong {
                 font-size: 4.8rem;
                 font-weight: 800;
                 color: #dbff00;
+
+                @media (max-width: $lg) {
+                    font-size: 2.8rem;
+                }
             }
         }
 
@@ -44,6 +90,13 @@
             width: 100%;
             height: 64px;
             margin-top: 10px;
+
+            @media (max-width: $lg) {
+                max-width: 180px;
+
+                font-size: 1.2rem;
+                height: 31px;
+            }
         }
     }
 
@@ -54,6 +107,13 @@
 
         background-image: url('../img/banner/2/bg.jpg');
         background-size: cover;
+
+        @media (max-width: $lg) {
+            min-height: 78px;
+            max-height: 78px;
+
+            padding: 0 34px;
+        }
 
         .banner__inner {
             height: 100%;
@@ -68,6 +128,11 @@
             line-height: 1.2;
 
             color: #fff;
+
+            @media (max-width: $lg) {
+                max-width: 245px;
+                font-size: 1.2rem;
+            }
         }
     }
 
@@ -102,11 +167,24 @@
         flex-basis: 30%;
 
         background-color: #ff4207;
+
+        @media (max-width: $lg) {
+            padding: 22px;
+        }
     }
 
     &__delivery-btn {
         max-width: 286px;
         margin-top: 24px;
+
+        @media (max-width: $lg) {
+            margin-top: 13px;
+
+            max-width: 163px;
+            min-height: 35px;
+
+            font-size: 1.2rem;
+        }
     }
 
     &__title {
