--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -22,6 +22,11 @@
         text-transform: uppercase;
 
         border-radius: 4px;
+
+        @media (max-width: $lg) {
+            min-height: 37px;
+            font-size: 1.2rem;
+        }
     }
 
     &--xl {
@@ -36,6 +41,10 @@
         background-color: #f6feff;
         border-radius: 4px;
         border: 1px solid #96afb1;
+
+        @media (max-width: $lg) {
+            font-size: 1.4rem;
+        }
     }
 
     &--black {
