--- a/src/scss/components/contacts.scss
+++ b/src/scss/components/contacts.scss
@@ -23,11 +23,19 @@
         display: flex;
         flex-wrap: wrap;
         gap: 11px 9px;
+
+        @media (max-width: $lg) {
+            display: none;
+        }
     }
 
     &__item {
         display: flex;
         align-items: center;
+
+        @media (max-width: $lg) {
+            font-size: 1.4rem;
+        }
     }
     &__icon {
         max-width: 19px;
