--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -15,6 +15,10 @@
         .nav__link {
             display: block;
             padding: 23px 0;
+
+            @media (max-width: $lg) {
+                font-size: 1.4rem;
+            }
         }
     }
 
