feat: add burger anim

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -98,15 +98,20 @@
                 </address>
             </div>
             <div class="header__main-bottom">
-                <button type="button" class="burger">
-                    <div class="burger__icon">
-                        <span class="burger__item"></span>
-                        <span class="burger__item"></span>
-                        <span class="burger__item"></span>
-                    </div>
+                <div class="dropdown dropdown--menu">
+                    <button type="button" class="burger dropdown__btn">
+                        <div class="burger__icon">
+                            <span class="burger__item"></span>
+                            <span class="burger__item"></span>
+                            <span class="burger__item"></span>
+                        </div>
 
-                    Меню
-                </button>
+                        Меню
+                    </button>
+                    <div class="dropdown__content">
+
+                    </div>
+                </div>
 
                 <nav class="nav nav--main">
                     <ul class="nav__list">
