--- a/src/scss/components/burger.scss
+++ b/src/scss/components/burger.scss
@@ -2,7 +2,9 @@
     padding: 0;
     margin-right: 30px;
 
+    height: 64px;
     display: flex;
+    align-items: center;
     gap: 20px;
 
     font-size: 1.6rem;
