feat: add cover for footer form

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -69,6 +69,10 @@
                     <form class="form form--subscribe-news" action="/">
                         <input type="email" class="form__input" placeholder="Введите свой e-mail">
                         <button type="submit" class="btn btn--orange form__btn">Отправить</button>
+
+                        <div class="form__cover">
+                            <span>СПАСИБО! <span class="hightlight-orange"> НА СВЯЗИ</span></span>
+                        </div>
                     </form>
                 </div>
 
