--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,6 +49,9 @@ a {
 .hightlight-yellow {
     color: #dbff00;
 }
+.hightlight-orange {
+    color: #ff4207;
+}
 
 // components
 @import 'components/header.scss';
