--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -79,6 +79,25 @@
     &--subscribe-news {
         position: relative;
 
+        &.submit .form__cover {
+            display: flex;
+        }
+
+        .form__cover {
+            position: absolute;
+            inset: 0;
+            z-index: 1;
+
+            display: none;
+            justify-content: center;
+            align-items: center;
+            color: #fff;
+            text-transform: uppercase;
+
+            background-color: #000;
+            border: 2px solid #53545c;
+        }
+
         .form__input {
             height: 50px;
 
@@ -86,6 +105,7 @@
 
             font-size: 1.6rem;
             letter-spacing: 1px;
+            color: #fff;
 
             background: none;
             border: 2px solid #ff4207;
