fix: banner 2 input placeholder color

--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -44,6 +44,10 @@
             border-radius: 6px;
             border: 0;
 
+            &::placeholder {
+                color: #53545c;
+            }
+
             @media (max-width: $lg) {
                 max-width: 390px;
 
