--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -13,7 +13,7 @@
     cursor: pointer;
 
     &--lg {
-        min-height: 64px;
+        height: 64px;
 
         font-size: 2rem;
         font-weight: 800;
@@ -24,7 +24,7 @@
         border-radius: 4px;
 
         @media (max-width: $lg) {
-            min-height: 37px;
+            height: 37px;
             font-size: 1.2rem;
         }
     }
