--- a/src/scss/components/user-controls.scss
+++ b/src/scss/components/user-controls.scss
@@ -15,7 +15,7 @@
     }
 
     &__btn-text {
-        @media (max-width: $lg) {
+        @media (max-width: 1200px) {
             display: none;
         }
     }
