--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -32,7 +32,7 @@
                     </picture>
                 </a>
 
-                <ul class="socials">
+                <ul class="socials socials--header">
                     <li class="socials__item">
                         <a href="#" class="socials__link">
                             <svg class="socials__icon" width="18" height="15" viewBox="0 0 18 15" fill="none"
@@ -69,7 +69,7 @@
                     <input class="form__input" type="search" placeholder="Поиск...">
                 </form>
 
-                <address class="contacts">
+                <address class="contacts contacts--header">
                     <div class="contacts__data">
                         <div class="contacts__item">
                             <img class="contacts__icon" src="img/icons/envelope.svg" alt="конверт">
@@ -712,4 +712,25 @@
             </div>
         </div>
     </div>
+</header>
+
+<header class="header--mobile">
+    <button type="button" class="burger">
+        <div class="burger__icon">
+            <span class="burger__item"></span>
+            <span class="burger__item"></span>
+            <span class="burger__item"></span>
+        </div>
+    </button>
+
+    <form action="/" class="form--search">
+        <input class="form__input" type="search" placeholder="Поиск...">
+    </form>
+
+    <a href="index.html" class="logo header__logo">
+        <picture>
+            <source srcset="img/logo/logo.webp">
+            <img src="img/logo/logo.png" alt="Логотип">
+        </picture>
+    </a>
 </header>
