--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -23,9 +23,13 @@
 
         border-radius: 4px;
 
-        @media (max-width: $lg) {
+        @media (max-width: 999px) {
             height: 37px;
             font-size: 1.2rem;
+        }
+        @media (max-width: 576px) {
+            height: 28px;
+            font-size: 1rem;
         }
     }
 
@@ -42,8 +46,11 @@
         border-radius: 4px;
         border: 1px solid #96afb1;
 
-        @media (max-width: $lg) {
+        @media (max-width: 999px) {
             font-size: 1.4rem;
+        }
+        @media (max-width: 576px) {
+            font-size: 1.6rem;
         }
     }
 
