--- a/src/scss/components/burger.scss
+++ b/src/scss/components/burger.scss
@@ -9,6 +9,8 @@
 
     font-size: 1.6rem;
     font-weight: 800;
+    color: #182d4d;
+    text-transform: uppercase;
 
     background: none;
     border: 0;
@@ -24,6 +26,14 @@
         .burger__item:nth-child(3) {
             transform: translateY(-8px) rotate(135deg);
         }
+    }
+
+    @media (max-width: $lg) {
+        font-size: 1.4rem;
+    }
+
+    @media (max-width: $md) {
+        margin-right: 0;
     }
 
     &__icon {
