--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,6 +1,10 @@
 .footer {
     background-color: #000;
 
+    @media (max-width: $md) {
+        display: none;
+    }
+
     &__inner {
         position: relative;
         padding: 38px 0 30px;
@@ -49,6 +53,8 @@
     }
 
     &__years {
+        margin-bottom: 11px;
+
         font-size: 1.4rem;
         letter-spacing: 0.05em;
         color: #53545c;
