--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -5,6 +5,40 @@
     box-shadow: 0px 0px 1px rgba(49, 70, 124, 0.25),
         0px 0px 10px rgba(165, 172, 199, 0.4);
 
+    @media (max-width: 576px) {
+        display: none;
+    }
+
+    &--mobile {
+        display: none;
+        justify-content: space-between;
+        align-items: center;
+        gap: 15px;
+
+        padding: 20px;
+
+        background-color: #fff;
+
+        box-shadow: 0px 0px 1px rgba(49, 70, 124, 0.25),
+            0px 0px 10px rgba(165, 172, 199, 0.4);
+
+        @media (max-width: 576px) {
+            display: flex;
+        }
+
+        .form__input {
+            max-width: 130px;
+            height: 34px;
+        }
+
+        .header__logo {
+            img {
+                max-width: 96px;
+                height: 31px;
+            }
+        }
+    }
+
     &__top {
         background-color: $colors-font-main;
     }
@@ -19,13 +53,13 @@
         color: #cce1e3;
 
         @media (max-width: $lg) {
-            padding: 0 34px;
+            padding: 0 15px;
         }
     }
 
     &__main {
         @media (max-width: $lg) {
-            padding: 0 34px;
+            padding: 0 15px;
         }
     }
 
@@ -39,6 +73,8 @@
     }
 
     &__main-bottom {
+        position: relative;
+
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -46,7 +82,7 @@
 
     &__logo {
         img {
-            @media (max-width: $lg) {
+            @media (max-width: 999px) {
                 max-width: 120px;
                 height: 39px;
             }
