--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -20,12 +20,25 @@
 
         .section__inner {
             padding-top: 60px;
-            padding-bottom: 25px;
+            padding-bottom: 68px;
+
+            @media (max-width: $lg) {
+                padding: 35px 0 40px;
+            }
+            @media (max-width: 576px) {
+                padding: 27px 0 35px;
+            }
         }
 
         .section__content {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
+
+            @media (max-width: 576px) {
+                grid-template-columns: 1fr;
+                gap: 10px;
+                place-items: center;
+            }
         }
     }
 
@@ -35,6 +48,13 @@
         .section__inner {
             padding-top: 60px;
             padding-bottom: 66px;
+
+            @media (max-width: $lg) {
+                padding: 30px 0 48px;
+            }
+            @media (max-width: 576px) {
+                padding: 17px 0;
+            }
         }
 
         .section__content {
@@ -52,6 +72,12 @@
             padding-bottom: 73px;
 
             display: flex;
+
+            @media (max-width: 576px) {
+                padding: 30px 0;
+
+                flex-direction: column;
+            }
         }
         .section__content {
             padding-top: 18px;
@@ -82,6 +108,9 @@
             @media (max-width: $lg) {
                 max-width: 307px;
             }
+            @media (max-width: 576px) {
+                max-width: 244px;
+            }
         }
     }
 
@@ -100,6 +129,11 @@
             margin-bottom: 32px;
 
             font-size: 3.6rem;
+        }
+        @media (max-width: $lg) {
+            margin-bottom: 19px;
+
+            font-size: 2.6rem;
         }
     }
 }
