--- a/src/scss/components/socials.scss
+++ b/src/scss/components/socials.scss
@@ -2,6 +2,12 @@
     display: flex;
     gap: 8px;
 
+    &--header {
+        @media (max-width: $md) {
+            display: none;
+        }
+    }
+
     &--footer {
         .socials__link {
             border-color: #dbff00;
@@ -11,6 +17,18 @@
                 .socials__icon path {
                     fill: #000;
                 }
+            }
+
+            @media (max-width: 999px) {
+                width: 26px;
+                height: 26px;
+            }
+        }
+
+        .socials__icon {
+            @media (max-width: 999px) {
+                max-width: 16px;
+                height: 12px;
             }
         }
     }
@@ -38,7 +56,7 @@
             }
         }
 
-        @media (max-width: $lg) {
+        @media (max-width: 999px) {
             width: 20px;
             height: 20px;
 
