--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -15,6 +15,8 @@
         align-items: center;
         gap: 15px;
 
+        max-height: 70px;
+
         padding: 20px;
 
         background-color: #fff;
