--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -69,3 +69,4 @@ a {
 @import 'components/card.scss';
 @import 'components/swiper.scss';
 @import 'components/dropdown.scss';
+@import 'components/menu.scss';
