--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -9,7 +9,7 @@
             font-family: $family;
             font-size: 1.4rem;
             color: $colors-font-main;
-            letter-spacing: 5%;
+            letter-spacing: 0.05em;
 
             border: 2px solid #cce1e3;
             border-radius: 45px;
